links-server/k8s/links-helm/templates/links-server.yml
apiVersion: v1
kind: Service
metadata:
  name: links
spec:
  selector:
    app: links
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
