links-server/k8s/links-helm/templates/links-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: links-server-ingress
  annotations:
    # use nginx
    kubernetes.io/ingress.class: "nginx"
    # rewrite the target based on the regex capture group
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
    # Merge the slashes before rewriting
    nginx.ingress.kubernetes.io/merge-slashes: "true"
spec:
  rules:
    - host: links.simulacron.eu
      http:
        paths:
          #- path: /links(/|$)(.*)
          #- path: /links/(.*)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: links
                port:
                  number: 80
